# to-do

./: .gitignore  README.md
3-beginner-ai-project/: requirements.txt
AI Agent Tutorial/: research_output.txt  tools.py
AI-Image-Generator/: 2-1.py  3-5.py
API-for-LLM/: .env.example  main.py  test-api.py
Code Gen Agent/: README.md  main.py  test_ollama.py
GO Tutorial/: spin.go
HF Tutorial/: example1.py  main.py
LangChain/: chain.py  multiple_messages.py  output_parser.py  prompt_template.py  simple_example.py
Local AI Agent Tutorial/: main.py
RAGApp/: how-to.txt  main.py  vector_db.py
RestaurantNameGenerator/: langchain_helper.py  main.py
ai-agent-2/advanced-agent/: pyproject.toml
ai-agent-2/advanced-agent/src/: firecrawl.py  workflow.py
ai-agent-tutorial/: README.md  main.py
ai-search-agent/: main.py  web_operations.py
book-recommender/: .env.example  README.md  data-exploration.ipynb  gradio-dashboard.py  requirements.txt  sentiment-analysis.ipynb  text-classification.ipynb  vector-search.ipynb
bytedanceplus/: main.py  model.py  reasoning.py  requirements.txt  visual-understanding.py
code-gen-agent/: .env.example  code_reader.py
fine-tuning-demo/: Fine Tuning.ipynb
go-tutorial/: go.mod  main.go  utils.go
hello-k8s/: Dockerfile  hello-config.yaml  hello-deployment.yaml  hello-pod.yaml  hello-secret.yaml  hello-service.yaml  package-lock.json  package.json
langgraph tutorial/: main.py  requirements.txt  simple.py
local-ai-agent-tutorial/: .env.example  vector.py
multi-agent chatbot/: .env.example  ARCHITECTURE.md  README.md  (+3 more)
(+59 files in other folders)
